fix: исправляем сохранения фильтров по умолчанию